Fix spacing on page and tidy css

--- a/style.css
+++ b/style.css
@@ -2,13 +2,21 @@
     text-align: center;
     box-sizing: border-box;
     font-family: "Monaco", monospace;
-    font-size: medium;
+    font-size: large;
     overflow-x: hidden;
     z-index: 1;/* Gives everything a default layer of 1*/
   }
-
+  section {
+    padding-top: 100px;
+  }
   h1 {
     font-size: 5vw;
+    padding: 5vw;
+  }
+
+  ol {
+    max-width: 60vw;
+    margin: auto;
   }
 
   a {
@@ -20,13 +28,13 @@
   body {
     box-sizing: border-box;
     margin: 0px;
-    padding-top: 3vh;
     height: 300vh;
     background-color: #e7cba9;
   }
 
   #page_navigation {
     height: auto;
+    min-height: 3vw;
     width: 100%;
     position: fixed;
     top: 0;
@@ -34,7 +42,7 @@
     z-index: 2;/*higher layer so this is always on top when scrolling*/
   }
   #navlist {
-    margin: 0;
+    margin: auto;
     padding: 0;
     height: auto;
     display: flex;
@@ -71,20 +79,9 @@
   li {
     list-style-type: none;
   }
-  #navlist > a {
-    height: 100%;
-  }
-
-  section {
-    margin-top: 10px;
-  }
 
   #navlist > li {
-    padding: 5px;
-  }
-
-  h1 {
-    margin-top: 5vh; margin-bottom: 5vh;
+    padding: 1vw;
   }
 
   @media only screen and (max-width: 768px) {
@@ -97,12 +94,19 @@
 
     }
 
+    section {
+      margin-top: 10px;
+    }
+
     #splash_image{
       box-sizing: border-box;
       height: 60vh;
       max-width: none;
       width: auto;
       object-fit: cover;
+    }
+    ol {
+      max-width: 100vw;
     }
     
     #page_navigation {
